// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OrganizationProducts reducer should handle ORGANIZATION_PRODUCTS_FAILURE 1`] = `
Object {
  "error": [Error: some error],
  "loading": false,
  "results": Array [],
}
`;

exports[`OrganizationProducts reducer should handle ORGANIZATION_PRODUCTS_REQUEST 1`] = `
Object {
  "error": null,
  "loading": true,
  "results": Array [],
}
`;

exports[`OrganizationProducts reducer should handle ORGANIZATION_PRODUCTS_SUCCESS 1`] = `
Object {
  "error": null,
  "loading": false,
  "results": Array [
    "some",
    "results",
  ],
}
`;

exports[`OrganizationProducts reducer should return the initial state 1`] = `
Object {
  "error": null,
  "loading": false,
  "results": Array [],
}
`;
